--- a/.github/ISSUE_TEMPLATE/chore.yml
+++ b/.github/ISSUE_TEMPLATE/chore.yml
@@ -1,6 +1,6 @@
 name: "🧹 Chore"
 description: "Tarefas de manutenção e ajustes que não alteram comportamento do sistema"
-title: "🦆 [CHORE] -"
+title: "🦆 [CHORE] - "
 labels: [ "chore" ]
 projects:
   - clickpto/Kanban
@@ -12,60 +12,65 @@ body:
       placeholder: Descrição Geral
     validations:
       required: true
-  - type: markdown
+
+  - type: dropdown
+    id: status
     attributes:
-      value: |
-        ## ORIENTAÇÕES GERAIS
+      label: 🧭 Status
+      options:
+        - To Do
+        - Doing
+        - Review
+        - Blocked
+        - Done
+    validations:
+      required: true
 
-        ### Preencher formulário "Kanban"
+  - type: dropdown
+    id: prioridade
+    attributes:
+      label: 🗓️ Priority
+      options:
+        - 🧊 Baixa
+        - ⚙️ Média
+        - 🔥 Alta
+    validations:
+      required: true
 
-        O formulário "Kanban" estará disponível na própria tarefa após a criação desta.
+  - type: input
+    id: story_points
+    attributes:
+      label: ⏱️ Story Points
+      description: Use sequência de Fibonacci (1, 3, 5, 8, 13, 21).
+      placeholder: "1, 3, 5, 8, 13 ou 21"
 
-          - Assignee (Requerido ao iniciar a atividade)
-          - Priority (Requerido)
-          - Story Points (Requerido¹)
-          - Iteration (Requerido ao liberar para Sprint)
-          - Start date (Requerido ao iniciar a atividade)
-          - End date (Requerido ao finalizar a atividade)
-          - Release (Requerido se roadmap for definido¹)
+  - type: dropdown
+    id: iteration
+    attributes:
+      label: 🌀 Iteration (Sprint)
+      description: "Nome igual ao do Project (ex.: Sprint 12)"
+      options:
+        - Sprint 11
+        - Sprint 12
+        - Sprint 13
 
-          ¹ Para atividades de desenvolvimento.
+  - type: input
+    id: start_date
+    attributes:
+      label: 📅 Start date
+      description: "Formato YYYY-MM-DD (ex.: 2025-11-07)"
+      placeholder: "2025-11-07"
 
-        ### ⌚ DOR
+  - type: input
+    id: end_date
+    attributes:
+      label: 📅 End date
+      description: "Formato YYYY-MM-DD (ex.: 2025-11-21)"
+      placeholder: "2025-11-21"
 
-        - História criada utilizando o template de escrita.
-        - História refinada, quebrada nas subtarefas.
-        - História alinhada com o time/interessados.
-        - Mapeamento das APIs, serviços e definições arquiteturais impactadas pela história e procedimentos de publicação.
-        - Ambientes configurados e acessos necessários disponibilizados.
-        - Ausência de dependências com outras Histórias inacabadas.
-        - Legislação e conformidade verificadas, se aplicável.
-
-        ### ✅ DOD
-
-        - Atendimento e evidências de todos os critérios de aceite.
-        - Testes unitários desenvolvidos e executados.
-        - Deploy em PRD.
-        - Code review realizado.
-        - Testes prontos.
-        - Documentação atualizada.
-
-        ### Fibonacci Score Table Complexity/Effort Conversion (Story Points)
-
-        | COMPLEXITY  | EFFORT  | PUNCTUATION  |
-        | ----------- | ------- | ------------ |
-        | L           | L       | 1            |
-        | M           | L       | 3            |
-        | H           | L       | 5            |
-        | L           | M       | 3            |
-        | M           | M       | 8            |
-        | H           | M       | 13           |
-        | L           | H       | 5            |
-        | M           | H       | 13           |
-        | H           | H       | 21           |
-
-          - L = Low
-          - M = Medium
-          - H = High
-
-          **NOTA:** A partir de 21 pontos, dividir em outras tarefas.
+  - type: input
+    id: release
+    attributes:
+      label: 🏷️ Release/Milestone
+      description: "Ex.: v1.4.0 ou Sprint-Release-2025-11"
+      placeholder: "v1.4.0"
