--- a/.github/ISSUE_TEMPLATE/docs.yml
+++ b/.github/ISSUE_TEMPLATE/docs.yml
@@ -1,7 +1,7 @@
-name: "🔬 Spike"
-description: "Pesquisa técnica exploratória para investigar e validar abordagens antes da implementação"
-title: "🔍 [SPIKE] -"
-labels: [ "spike" ]
+name: "📚 Documentação"
+description: "Atualização ou criação de documentação técnica, guias e referências"
+title: "🖊️ [DOCS] -"
+labels: [ "docs" ]
 projects:
   - clickpto/Kanban
 body:
